--- a/_posts/2018-11-25-tcp ip概念初识.md
+++ b/_posts/2018-11-25-tcp ip概念初识.md
@@ -6,64 +6,109 @@ description: "认识tcp/ip协议，了解一个请求的完整过程"
 tag: 计算机网络
 ---
 
-### (1)什么是协议?
+### 一、什么是协议?
 
 协议就是两个或多个对象之间为了某个或多个需求而设置的约定，即在什么时间，遇到什么情况该做什么。
+
 举例: 小强和小明约定周末一起去玩小霸王游戏机，但是如果遇上停电就去掏鸟窝。
 
-### (2)什么是TCP/IP协议?
+### 二、什么是TCP/IP协议?
 
-TCP/IP协议就是为了满足世界上成千上万的网络设备的各种通信需求而设计的一套约定。
-举例: 你要从某网站下载一部电影，如何实现呢？首先网站服务器和你的电脑互相识别，
+TCP/IP 协议就是为了满足世界上成千上万的网络设备的各种通信需求而设计的一套约定。
 
-需要IP协议；为了跨越几千公里的互联网找到一条通往你电脑的路径，
+举例: 你要从某网站下载一部电影，如何实现呢？
 
-需要路由协议；为了片子数据传输不丢失乱序重复，
+首先网站服务器和你的电脑互相识别，`需要 IP协议；`
 
-需要TCP协议；另外你可以用FTP协议接收电影。单个协议就是单个约定，以TCP为例，约定了通信时超时怎么办?数据丢失怎么办?乱序怎么办?网络拥塞了怎么办?等等。
+为了跨越几千公里的互联网找到一条通往你电脑的路径，`需要路由协议；`
 
-### (3)TCP/IP为什么这么多协议？
+为了片子数据传输不丢失乱序重复，`需要 TCP协议；`
 
-不是协议多，而是需求多，每个协议都是从具体的实际需求中产生的。需求多了，问题就多，为了解决一个个的问题，而出现了一个个的协议。举例:支付页面一般是https，因为安全需求；组播协议出现是因为网络点播需求；IP over AOS出现是因为宇航员方便上网的需求等等。
+另外你可以用FTP协议接收电影。单个协议就是单个约定，以TCP为例，
 
-### (4)TCP/IP协议为什么分层?
+约定了通信时超时怎么办?
 
-“分层”的思想可以应用到很多领域，它是复杂问题简单化的有效方法。协议分层好处: 协议只需关注本层问题，直接利用下层提供的服务，同时向上层提供服务，并且每层的更改不会影响其他层。举例:经典五层模型:物理层->;链路层->;网络层->;传输层->;应用层
+数据丢失怎么办?
 
-### (5)TCP/IP协议如何入门?
+乱序怎么办?
 
-要点1: 谨记“网络协议因需求而产生，以解决实际问题为目的”，因此学习某个协议一定要了解它的应用场景和提出目的。
+网络拥塞了怎么办? 等等。
 
-要点2: 选一本好的入门教程。本人极力推荐谢希仁教授的《计算机网络》，本书概念清晰，思路明确，既不肤浅又不是很深入且面面俱到，现在已经出到第六版，本书阅读不得低于3遍。
+### 三、TCP/IP为什么这么多协议？
 
-要点3: 针对某个协议，深入理解其报文格式是学习的关键。协议程序化后就是“数据结构+算法”，报文格式就是“数据结构”。
+​	不是协议多，而是需求多，每个协议都是从具体的实际需求中产生的。需求多了，问题就多，为了解决一个个的问题，而出现了一个个的协议。
 
-要点4: 一定要动手实验，这可以加深对协议理解。比如可以用网络抓包(如wireshark)学习某个协议的算法，如ARP的发现过程，TCP的握手协议，TFTP的文件传输原理。还可以网络编程，如简单的网络攻击软件制作等。
+举例:支付页面一般是https，因为安全需求；
+
+组播协议出现是因为网络点播需求；
+
+IP over AOS 出现是因为宇航员方便上网的需求等等。
+
+### 四、TCP/IP协议为什么分层?
+
+​	“分层”的思想可以应用到很多领域，它是复杂问题简单化的有效方法。
+
+协议分层好处: 协议只需关注本层问题，直接利用下层提供的服务，同时向上层提供服务，并且每层的更改不会影响其他层。
+
+举例:
+
+经典四层模型: `应用层—>传输层—>网络层—>物理层（链路层）`
+
+### 五、TCP/IP协议如何入门?
+
+`要点1:` 谨记“网络协议因需求而产生，以解决实际问题为目的”，因此学习某个协议一定要了解它的应用场景和提出目的。
+
+`要点2:` 选一本好的入门教程。本人极力推荐谢希仁教授的《计算机网络》，本书概念清晰，思路明确，既不肤浅又不是很深入且面面俱到，现在已经出到第六版，本书阅读不得低于3遍。
+
+`要点3:` 针对某个协议，深入理解其报文格式是学习的关键。协议程序化后就是“数据结构+算法”，报文格式就是“数据结构”。
+
+`要点4:` 一定要动手实验，这可以加深对协议理解。比如可以用网络抓包(如wireshark)学习某个协议的算法，如ARP的发现过程，TCP的握手协议，TFTP的文件传输原理。还可以网络编程，如简单的网络攻击软件制作等。
 
 
 
 
-### tcp/ip的分层：
+### 六、TCP/IP 的分层：
 
 ![](https://javaGe.github.io/images/blog/tcp ip分层.png)
 
+
+
+### 七、各协议层打包和拆包过程：
 
 在浏览器发送信息到服务的时候，在通信协议的过程中，会分为四层：
 
 首先，是应用层（http协议），封装一些要传递的信息。
 
-其次，到传输层（tcp协议）。tcp协议对应用层数据进行打包。
+其次，到传输层（tcp协议）, tcp协议对应用层数据进行打包。
 
 然后，到网络层（ip协议），通过ip找到对应的服务器。
 
 最后，到链路层（通过物理的介质传输数据）。
 
-
 **每一层都会对上一层进行打包。**
 
 ![](https://javaGe.github.io/images/blog/数据包的打包和解包.png)
 
-
-浏览器访问网页的整个流程：
+### 八、浏览器访问网页的整个流程：
 
 ![](https://javaGe.github.io/images/blog/一个请求的过程.png)
+
+
+
+### 九、举例：网上购物的请求流程
+
+#### 1.各层间的走向
+
+客户端(浏览器) —> 应用层 （http,https，DNS）—> 传输层(TCP, UDP) —> 网络层 (IP)—>物理层—> 服务器
+
+—> 物理层—>网络层 —> 传输层 —> 应用层 —>具体的应用处理 
+
+#### 2.具体的请求过程
+
+你先在浏览器里面输入 https://www.kaola.com ，这是一个URL。浏览器只知道名字
+
+是“www.kaola.com”，接着它打开地址簿去查找（DNS），查找到对应的 IP（106.114.138.24） 地址，
+
+知道了具体的 IP 地址后，浏览器开始打包请求（HTTP）：
+
+![](https://javaGe.github.io/images/blog/)
