--- a/_posts/2018-11-25-tcp ip概念初识.md
+++ b/_posts/2018-11-25-tcp ip概念初识.md
@@ -111,4 +111,37 @@ IP over AOS 出现是因为宇航员方便上网的需求等等。
 
 知道了具体的 IP 地址后，浏览器开始打包请求（HTTP）：
 
-![](https://javaGe.github.io/images/blog/)
+![](https://javaGe.github.io/images/blog/应用层打包.png)
+
+经过应用层封装后，浏览器会将应用层的包交给下一层去完成，通过 socket 编程来实现。下一层是传输层（TCP, UDP）,TCP 协议里面会有两个端口，一个是浏览器监听的端口，一个是电商的服务器监听的端口。操作系统往往通过端口来判断，它得到的包应该给哪个进程。
+
+![](https://javaGe.github.io/images/blog/传输层打包.png)
+
+传输层封装完毕后，浏览器会将包交给操作系统的网络层。网络层的协议是 IP 协议。在 IP 协议
+里面会有源 IP 地址，即浏览器所在机器的 IP 地址和目标 IP 地址，也即电商网站所在服务器的
+IP 地址。
+
+![](https://javaGe.github.io/images/blog/网络层打包.png)
+
+于是操作系统将 IP 包交给了下一层，也就是MAC 层。网卡再将包发出去。由于这个包里面是
+有 MAC 地址的，因而它能够到达网关。
+网关收到包之后，会根据自己的知识，判断下一步应该怎么走。网关往往是一个路由器，到某个
+IP 地址应该怎么走，这个叫作路由表。
+
+![](https://javaGe.github.io/images/blog/物理层打包.png)
+
+走到最后一个网关后，通过 IP 找到具体的机器，通过端口找到对应的应用进行处理该笔请求。
+
+#### 3.服务器端处理流程
+
+![](https://javaGe.github.io/images/blog/服务器端拆包.png)
+
+
+
+
+
+参考资料：
+
+①书籍《图解HTTP》
+
+②极客时间|趣谈网络协议  --刘超
