--- a/_posts/2019-02-05-sql语句执行步骤详解.md
+++ b/_posts/2019-02-05-sql语句执行步骤详解.md
@@ -8,7 +8,7 @@ tag: 数据库学习
 
 [TOC]
 
-### 一、准备工作
+# 一、准备工作
 
 先来一段伪代码，首先你能看懂么？
 
@@ -119,7 +119,7 @@ create database TestDB;
 
 使用上述SQL查询语句来获得来自杭州，并且订单数少于2的客户。
 
-### 二、SQL逻辑查询语句执行顺序
+# 二、SQL逻辑查询语句执行顺序
 
 还记得上面给出的那一长串的SQL逻辑查询规则么？那么，到底哪个先执行，哪个后执行呢？现在，我先给出一个查询语句的执行顺序：
 
@@ -217,7 +217,7 @@ create database TestDB;
 上面标出了各条查询规则的执行先后顺序，那么各条查询语句是如何执行的呢？
 
 
-#### (1)执行FROM语句
+## (1)执行FROM语句
 
 在这些 SQL 语句的执行过程中，都会产生一个虚拟表，用来保存 SQL 语句的执行结果（这是重点），我现在就来跟踪这个虚拟表的变化，得到最终的查询结果的过程，来分析整个 SQL 逻辑查询的执行顺序和过程。
 
@@ -259,7 +259,7 @@ create database TestDB;
 	+-------------+----------+----------+-------------+
 总共有28（table1的记录条数 * table2的记录条数）条记录。这就是VT1的结果，接下来的操作就在VT1的基础上进行。
 
-#### (2)执行ON过滤
+## (2)执行ON过滤
 
 执行完笛卡尔积以后，接着就进行`ON a.customer_id = b.customer_id`条件过滤，根据ON中指定的条件，去掉那些不符合条件的数据，得到VT2表，内容如下：
 
@@ -276,7 +276,7 @@ create database TestDB;
 
 VT2就是经过ON条件筛选以后得到的有用数据，而接下来的操作将在VT2的基础上继续进行。
 
-#### (3) JOIN 添加外部行
+## (3) JOIN 添加外部行
 
 这一步只有在连接类型为`OUTER JOIN`时才发生，如`LEFT OUTER JOIN、RIGHT OUTER JOIN和FULL OUTER JOIN`。在大多数的时候，我们都是会省略掉OUTER关键字的，但OUTER表示的就是外部行的概念。
 
@@ -348,7 +348,7 @@ FULL OUTER JOIN把左右表都作为保留表，得到的结果为：
 
 接下来的操作都会在该VT3表上进行。
 
-#### (4)执行WHERE过滤
+## (4)执行WHERE过滤
 
 对添加外部行得到的VT3进行WHERE过滤，只有符合<where_condition>的记录才会输出到虚拟表VT4中。当我们执行WHERE a.city = 'hangzhou'的时候，就会得到以下内容，并存在虚拟表VT4中：
 
@@ -367,7 +367,7 @@ FULL OUTER JOIN把左右表都作为保留表，得到的结果为：
 由于还没有进行列的选取操作，因此在SELECT中使用列的别名也是不被允许的，
 如：`SELECT city as c FROM t WHERE c='shanghai';`是不允许出现的。
 
-#### (5) 执行 GROUP BY 分组
+## (5) 执行 GROUP BY 分组
 
 `GROU BY`子句主要是对使用WHERE子句得到的虚拟表进行分组操作。我们执行测试语句中的`GROUP BY a.customer_id`，就会得到以下内容：
 
@@ -380,7 +380,7 @@ FULL OUTER JOIN把左右表都作为保留表，得到的结果为：
 	+-------------+----------+----------+-------------+
 得到的内容会存入虚拟表VT5中，此时，我们就得到了一个VT5虚拟表，接下来的操作都会在该表上完成。
 
-#### (6) 执行HAVING过滤
+## (6) 执行HAVING过滤
 
 `HAVING`子句主要和`GROUP BY`子句配合使用，对分组得到的VT5虚拟表进行条件过滤。当我执行测试语句中的`HAVING count(b.order_id) < 2`时，将得到以下内容：
 
@@ -393,7 +393,7 @@ FULL OUTER JOIN把左右表都作为保留表，得到的结果为：
 
 这就是虚拟表VT6。
 
-#### (7) SELECT列表
+## (7) SELECT列表
 
 现在才会执行到`SELECT`子句，不要以为`SELECT`子句被写在第一行，就是第一个被执行的。
 
@@ -408,13 +408,15 @@ FULL OUTER JOIN把左右表都作为保留表，得到的结果为：
 
 不，还没有完，这只是虚拟表VT7。
 
-####　(８)执行 DISTINCT 子句
+##　(８)执行 DISTINCT 子句
 
 如果在查询中指定了`DISTINCT`子句，则会创建一张内存临时表（如果内存放不下，就需要存放在硬盘了）。这张临时表的表结构和上一步产生的虚拟表 VT7 是一样的，不同的是对进行`DISTINCT`操作的列增加了一个唯一索引，以此来除重复数据。
 
 由于我的测试SQL语句中并没有使用 `DISTINCT`，所以，在该查询中，这一步不会生成一个虚拟表。
 
-#### （9）执行 ORDER BY 子句
+
+
+## （9）执行 ORDER BY 子句
 
 对虚拟表中的内容按照指定的列进行排序，然后返回一个新的虚拟表，我们执行测试SQL语句中的`ORDER BY total_orders DESC`，就会得到以下内容：
 
@@ -427,7 +429,7 @@ FULL OUTER JOIN把左右表都作为保留表，得到的结果为：
 
 可以看到这是对 total_orders 列进行降序排列的。上述结果会存储在VT8中。
 
-#### （10） 执行 LIMIT 子句
+## （10） 执行 LIMIT 子句
 
 `LIMIT`子句从上一步得到的VT8虚拟表中选出从指定位置开始的指定行数据。对于没有应用`ORDER BY`的`LIMIT`子句，得到的结果同样是无序的，所以，很多时候，我们都会看到`LIMIT`子句会和`ORDER BY`子句一起使用。
 
@@ -444,7 +446,7 @@ MySQL数据库的LIMIT支持如下形式的选择：
 
 
 
-### 三、SQL书写习惯
+# 三、SQL书写习惯
 
 
 
@@ -452,7 +454,7 @@ MySQL数据库的LIMIT支持如下形式的选择：
 了解了 SQL 执行顺序，那么我们就接下来进一步养成日常 sql好习惯，也就是在实现功能同时有考虑性能的思想，数据库是能进行集合运算的工具，我们应该尽量的利用这个工具，所谓集合运算实际就是批量运算，就是尽量减少在客户端进行大数据量的循环操作，而用SQL语句或者存储过程代替。
 
 
-#### 1.只返回需要的数据
+## 1.只返回需要的数据
 
 返回数据到客户端至少需要数据库提取数据、网络传输数据、客户端接收数据以及客户端处理数据等环节。
 如果返回不需要的数据，就会增加服务器、网络和客户端的无效劳动，其害处是显而易见的，避免这类事件需要注意：
@@ -484,7 +486,7 @@ MySQL数据库的LIMIT支持如下形式的选择：
 	UPDATE操作不要拆成DELETE操作+INSERT操作的形式，虽然功能相同，但是性能差别是很大的。
 
 
-#### 2.注意 `临时表` 和 `表变量` 的用法
+## 2.注意 `临时表` 和 `表变量` 的用法
 
 在复杂系统中，临时表和表变量很难避免，关于临时表和表变量的用法，需要注意：
 
@@ -508,7 +510,7 @@ MySQL数据库的LIMIT支持如下形式的选择：
 所以我的建议是，在并发系统中，尽量使用`CREATE TABLE + INSERT INTO`，而大数据量的单个语句使用中，使用SELECT INTO。
 
 
-#### 3.子查询的用法
+## 3.子查询的用法
 
 子查询是一个 `SELECT` 查询，它嵌套在 `SELECT、INSERT、UPDATE、DELETE `语句或其它子查询中。
 任何允许使用表达式的地方都可以使用子查询，子查询可以使我们的编程灵活多样，可以用来实现一些特殊的功能。
@@ -633,7 +635,7 @@ MySQL数据库的LIMIT支持如下形式的选择：
 	    应改为:
 	    WHERE FNAME='HAIWEI' AND LNAME='YANG'
 
-#### 4.多表连接的连接条件
+## 4.多表连接的连接条件
 
 多表连接的连接条件对索引的选择有着重要的意义，所以我们在写连接条件的时候需要特别注意。
 
@@ -647,7 +649,7 @@ MySQL数据库的LIMIT支持如下形式的选择：
 
 `WHERE`也应该比 `HAVING`快点的，因为它过滤数据后才进行`SUM`，在两个表联接时才用`ON`的，所以在一个表的时候，就剩下`WHERE`跟`HAVING`比较了
 
-#### 5.考虑联接优先顺序
+## 5.考虑联接优先顺序
 
 `INNER JOIN
 LEFT JOIN (注：RIGHT JOIN 用 LEFT JOIN 替代)
@@ -661,7 +663,7 @@ CROSS JOIN`
 
 注意使用`DISTINCT`，在没有必要时不要用
 
-#### 6.TRUNCATE TABLE 与 DELETE 区别
+## 6.truncate table与 delete 区别
 
 **相同点：**
 
